Add SnapshotStore implementation

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,12 +1,24 @@
 bdb-journal {
-    class = "akka.persistence.journal.bdb.BdbJournal"
-    replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+  class = "akka.persistence.journal.bdb.BdbJournal"
+  replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
 
-    dir = "journal"
-    sync = true
-    cache-size-percent = 15
-    cleaner-threads = 2
-    stats-collect = false
-    group-commit-interval = "500 ns"
+  dir = "journal"
+  sync = true
+  cache-size-percent = 15
+  cleaner-threads = 2
+  stats-collect = false
+  group-commit-interval = "500 ns"
+}
 
+
+bdb-snapshot {
+  class = "akka.persistence.journal.bdb.BdbSnapshotStore"
+  plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
+
+  dir = "snapshots"
+  sync = true
+  cache-size-percent = 15
+  cleaner-threads = 2
+  stats-collect = false
+  group-commit-interval = "500 ns"
 }
