Rename `bdb-snapshot` plugin to `bdb-snapshot-store`

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -11,7 +11,7 @@ bdb-journal {
 }
 
 
-bdb-snapshot {
+bdb-snapshot-store {
   class = "akka.persistence.journal.bdb.BdbSnapshotStore"
   plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
 
