Add ReplicatedEnvironment configuration

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -8,6 +8,15 @@ bdb-journal {
   cleaner-threads = 2
   stats-collect = false
   group-commit-interval = "500 ns"
+  loglevel = off
+
+  replication = {
+    enabled = false
+    group-name = "group"
+    node-name = "node"
+    address = "localhost:8778"
+    helper-hosts = ["localhost:8778"]
+  }
 }
 
 
@@ -21,4 +30,14 @@ bdb-snapshot-store {
   cleaner-threads = 2
   stats-collect = false
   group-commit-interval = "500 ns"
+  loglevel = off
+
+  replication = {
+    enabled = false
+    group-name = "group"
+    node-name = "node"
+    address = "localhost:8778"
+    helper-hosts = ["localhost:8778"]
+  }
 }
+
