Access shared replicated environment via actor system extension

--- a/src/main/resources/reference.conf
+++ b/src/main/resources/reference.conf
@@ -1,14 +1,14 @@
-bdb-journal {
-  class = "akka.persistence.journal.bdb.BdbJournal"
-  replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
-
-  dir = "journal"
+bdb-persistence {
+  dir = "bdb-persistence"
   sync = true
   cache-size-percent = 15
   cleaner-threads = 2
   stats-collect = false
   group-commit-interval = "500 ns"
   loglevel = off
+
+  class = "akka.persistence.journal.bdb.BdbJournal"
+  replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
 
   replication = {
     enabled = false
@@ -23,21 +23,15 @@ bdb-journal {
 bdb-snapshot-store {
   class = "akka.persistence.journal.bdb.BdbSnapshotStore"
   plugin-dispatcher = "akka.persistence.dispatchers.default-plugin-dispatcher"
-
   dir = "snapshots"
   sync = true
-  cache-size-percent = 15
-  cleaner-threads = 2
-  stats-collect = false
-  group-commit-interval = "500 ns"
-  loglevel = off
+}
 
-  replication = {
-    enabled = false
-    group-name = "group"
-    node-name = "node"
-    address = "localhost:8778"
-    helper-hosts = ["localhost:8778"]
-  }
+
+bdb-journal {
+  class = "akka.persistence.journal.bdb.BdbJournal"
+  replay-dispatcher = "akka.persistence.dispatchers.default-replay-dispatcher"
+  dir = "journal"
+  sync = true
 }
 
